{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 88,
  "lineage": "1c6237b7-01fa-8f5a-81b9-d29a63987ef0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:003832909463:instance/i-013126112e3e02c91",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013126112e3e02c91",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SecKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0efbb5a94f5dfde08",
            "private_dns": "ip-10-1-1-79.ap-south-1.compute.internal",
            "private_ip": "10.1.1.79",
            "public_dns": "ec2-13-235-242-164.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.242.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0913902d9454fe211",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c65e57200e742622"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b64e238af64356c",
            "tags": {
              "Name": "ec2 mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c65e57200e742622"
            ]
          },
          "dependencies": [
            "aws_security_group.wp-security",
            "aws_subnet.private-subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:003832909463:instance/i-003902274e33c8275",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003902274e33c8275",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SecKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac83ca7d60734a5d",
            "private_dns": "ip-10-1-0-13.ap-south-1.compute.internal",
            "private_ip": "10.1.0.13",
            "public_dns": "ec2-35-154-188-191.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.188.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bfc7007dcfe098ba",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c65e57200e742622"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e55b708cf580b969",
            "tags": {
              "Name": "ec2 wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c65e57200e742622"
            ]
          },
          "dependencies": [
            "aws_instance.mysql",
            "aws_security_group.wp-security",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003832909463:internet-gateway/igw-00fd1c40f6fb67ce8",
            "id": "igw-00fd1c40f6fb67ce8",
            "owner_id": "003832909463",
            "tags": {
              "Name": "NATgateway"
            },
            "vpc_id": "vpc-05e317de9e46f0c89"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-078715be86f38c396",
            "owner_id": "003832909463",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00fd1c40f6fb67ce8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtable"
            },
            "vpc_id": "vpc-05e317de9e46f0c89"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08406b99606f54868",
            "route_table_id": "rtb-078715be86f38c396",
            "subnet_id": "subnet-0e55b708cf580b969"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql-security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003832909463:security-group/sg-00716c7d3b18bf1d9",
            "description": "mysql security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00716c7d3b18bf1d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql server",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql_sg",
            "name_prefix": null,
            "owner_id": "003832909463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e317de9e46f0c89"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003832909463:security-group/sg-0c65e57200e742622",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c65e57200e742622",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "003832909463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e317de9e46f0c89"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003832909463:subnet/subnet-06b64e238af64356c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-06b64e238af64356c",
            "map_public_ip_on_launch": true,
            "owner_id": "003832909463",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-05e317de9e46f0c89"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003832909463:subnet/subnet-0e55b708cf580b969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0e55b708cf580b969",
            "map_public_ip_on_launch": true,
            "owner_id": "003832909463",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-05e317de9e46f0c89"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003832909463:vpc/vpc-05e317de9e46f0c89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02626a678f76e4ace",
            "default_route_table_id": "rtb-0785b1b661ebdd824",
            "default_security_group_id": "sg-0eda52caa31c1618a",
            "dhcp_options_id": "dopt-4a4bb321",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05e317de9e46f0c89",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0785b1b661ebdd824",
            "owner_id": "003832909463",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}